fix alignment for IE11

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -91,7 +91,7 @@ html body {
 .page-content {
     width: 90%;
     max-width: 650px;
-    margin: 40px auto 20px;
+    margin: 40px 5% 20px;
     @media @mobile {
         margin: 20px auto;
     }
